# droneforce-contract

./: Anchor.toml  Cargo.toml  README.md
programs/droneforce_contract/: Cargo.toml
programs/droneforce_contract/src/: error.rs  helpers.rs  lib.rs
programs/droneforce_contract/src/instructions/: accept_task.rs  complete_task.rs  create_task.rs  mod.rs  record_verification.rs
programs/droneforce_contract/src/state/: task.rs
tests/: droneforce-contract.ts
