[package]
name = "droneforce_contract"
version = "0.1.0"
description = "DroneForce Protocol - Solana smart contract for drone mission tasks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "droneforce_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
